# atmo-asth-rust

./: .gitignore  CHAOS_REDUCTION_SOLUTION.md  Cargo.toml  README.AI.md  README.md  SCIENCE.astheosphere.md  SCIENCE.formula.md  atmosphere_generation.md  atmospheric_density_summary.md  evolving-energy-mass-models.md  final_thermal_test  force_directed_thermal_experiment  output.txt  rusty_engineering.md  solar_attenuation.md  summary.md  test_output.txt  thermal_diffusion_tuning  thermal_expansion.json  thermal_experiment  thermal_output.txt  verify_thermal_rates
config/: atmospheric_generation_billion_year_config.json  thermal_configs.json
examples/: 100_km_2_experiment.rs  4x_force_directed_thermal_experiment.rs  asth_cell_energy_analysis.rs  complete_equilibrium_test.rs  comprehensive_equilibrium_demo.rs  diffusion_tuning_comprehensive.rs  enhanced_global_atmo_test.rs  equilibrium_test.rs  export_heat_map.rs  final_thermal_test.rs  fine_grained_diffusion_experiment.rs  force_directed_thermal_experiment.rs  global_thermal_atmo.rs  global_thermal_basic.rs  global_thermal_radiance_integrated.rs  global_thermal_radiance_with_heat_map.rs  global_thermal_radiance_with_heat_map_hi_res.rs  height_scaling_test.rs  integrated_with_export.rs  lithosphere_feedback_demo.rs  lithosphere_lifecycle_test.rs  lithosphere_smoothing_experiment.rs  one_km_2_experiment.rs  production_rate_demo.rs  radiance_op_demo.rs  radiance_tuning.rs  radiance_visualization_op.rs  simple_global_test.rs  step_by_step_melting_tracker.rs  test_oscillating_foundry.rs  test_pressure_conductivity.rs  (+9 more)
(+115 files in other folders)
