[package]
name = "atmo-asth-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
glam = "0.30.4"
h3o = "0.8.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
noise = "0.9.0"
colored = "3.0.0"
more-asserts = "0.3.1"
image = "0.24"
imageproc = "0.23"
rocksdb = "0.22"
